--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "brace": "^0.8.0",
     "browserify": "^13.0.0",
     "bugsnag-js": "^2.5.0",
-    "bulkify": "^1.1.1",
     "classnames": "^2.1.5",
     "css": "^2.2.1",
     "envify": "^3.4.0",
@@ -74,14 +73,17 @@
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.6.1",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "bower": "^1.7.9",
+    "brfs": "^1.4.3",
     "brfs-babel": "^1.0.0",
     "browser-sync": "^2.11.1",
     "browserify-incremental": "^3.0.1",
+    "bulkify": "https://registry.npmjs.org/bulkify/-/bulkify-1.2.0.tgz",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "chai-react": "^3.0.1",
@@ -103,15 +105,19 @@
     "jasmine-pit": "^2.0.2",
     "jquery": "^2.2.2",
     "jsdom": "^9.0.0",
+    "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
     "mockfirebase": "^0.12.0",
     "npm-shrinkwrap": "^200.5.1",
     "proxyquire": "^1.7.4",
     "proxyquire-universal": "^1.0.8",
     "proxyquireify": "^3.1.1",
+    "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.0.2",
+    "transform-loader": "^0.2.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.13.1",
     "xmlshim": "^0.2.0"
   }
 }
