--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
     "enum": "^2.5.0",
     "enumify": "^1.0.4",
     "es6-set": "^0.1.4",
-    "esprima": "^4.0.0",
+    "esprima": "^4.0.1",
     "github-api": "^3.0.0",
     "hast-util-sanitize": "^1.1.1",
     "highlight.js": "^9.12.0",
@@ -182,7 +182,7 @@
     "inline-style-prefixer": "^4.0.2",
     "js-cookie": "^2.1.3",
     "jschannel": "^1.0.2",
-    "jshint": "2.9.4 || ^2.9.6",
+    "jshint": "^2.9.6",
     "keymirror": "^0.1.1",
     "loadjs": "^3.5.4",
     "lodash-es": "^4.17.10",
@@ -192,7 +192,7 @@
     "offline-plugin": "^5.0.3",
     "parse5-sax-parser": "^5.0.0",
     "pify": "^3.0.0",
-    "postcss": "^6.0.22",
+    "postcss": "^7.0.2",
     "promise-retry": "^1.1.1",
     "prop-types": "^15.6.2",
     "qs": "^6.1.0",
@@ -219,7 +219,7 @@
     "shallowequal": "^1.0.2",
     "slowparse": "^1.1.4",
     "strip-markdown": "^3.0.0",
-    "stylelint": "^9.2.0",
+    "stylelint": "^9.4.0",
     "sweetalert2": "^7.8.6",
     "uuid": "^3.1.0",
     "void-elements": "^3.1.0",
