--- a/package.json
+++ b/package.json
@@ -265,12 +265,12 @@
     "pretest": "script/check-configs && yarn run lint",
     "start": "gulp dev",
     "dev": "yarn install --frozen-lockfile && yarn start",
-    "test": "karma start --single-run --no-auto-watch",
-    "autotest": "yarn install --frozen-lockfile && karma start --no-single-run --auto-watch",
-    "lint-js": "eslint --max-warnings=0 --report-unused-disable-directives --ext .js,.jsx -- src test *.js",
-    "lint-css": "stylelint src/**/*.css",
-    "lint": "yarn run lint-js && yarn run lint-css",
-    "fixlint": "eslint --ext .js,.jsx --fix src test *.js",
+    "test": "jest",
+    "autotest": "jest --watchAll",
+    "test-deprecated": "karma start --single-run --no-auto-watch",
+    "autotest-deprecated": "karma start --no-single-run --auto-watch",
+    "lint": "eslint --report-unused-disable-directives --ext .js,.jsx --plugin react src test *.js && stylelint src/**/*.css",
+    "fixlint": "eslint --ext .js,.jsx --plugin react --fix src test *.js",
     "toc": "doctoc README.md --github --title '## Table of Contents'",
     "preview": "rm -rvf dist/* && NODE_ENV=production gulp build && static -a 0.0.0.0 -p 3000 dist",
     "analyze-bundle": "gulp js --production && source-map-explorer ./dist/application.js"
@@ -300,6 +300,7 @@
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-private-props": "^0.3.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
@@ -313,6 +314,7 @@
     "i18next-resource-store-loader": "^0.1.1",
     "imports-loader": "^0.8.0",
     "is-docker": "^1.1.0",
+    "jest": "^24.1.0",
     "jscodeshift": "^0.5.1",
     "json-loader": "^0.5.4",
     "karma": "^2.0.0",
