Use prettier in stylelint, remove redundant rules

--- a/package.json
+++ b/package.json
@@ -276,10 +276,12 @@
     "check-duplicate-dependencies": "script/check-duplicate-dependencies",
     "deduplicate": "yarn-deduplicate --strategy fewer",
     "dev": "yarn install --frozen-lockfile && yarn start",
-    "fixlint": "eslint --ext .js,.jsx --fix src test *.js",
-    "lint": "yarn run lint-js && yarn run lint-css",
-    "lint-css": "stylelint src/**/*.css",
-    "lint-js": "eslint --max-warnings=0 --report-unused-disable-directives --ext .js,.jsx -- src test *.js",
+    "fixlint": "yarn run fixlint.eslint && yarn run fixlint.stylelint",
+    "fixlint.eslint": "eslint --ext .js,.jsx --fix src test *.js",
+    "fixlint.stylelint": "stylelint --fix src/**/*.css",
+    "lint": "yarn run lint.eslint && yarn run lint.stylelint",
+    "lint.eslint": "eslint --max-warnings=0 --report-unused-disable-directives --ext .js,.jsx -- src test *.js",
+    "lint.stylelint": "stylelint src/**/*.css",
     "preview": "rm -rvf dist/* && NODE_ENV=production gulp build && static -a 0.0.0.0 -p 3000 dist",
     "test-jest": "jest",
     "test-karma": "karma start --single-run --no-auto-watch",
@@ -359,6 +361,8 @@
     "source-map-loader": "^0.2.2",
     "stats-webpack-plugin": "^0.6.2",
     "string-replace-loader": "^2.1.1",
+    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-prettier": "^1.1.1",
     "stylelint-selector-bem-pattern": "^2.0.0",
     "substitute-loader": "^1.0.0",
     "svg-react-loader": "^0.4.4",
