Add fixlint.prettier and lint.prettier

--- a/package.json
+++ b/package.json
@@ -276,11 +276,13 @@
     "check-duplicate-dependencies": "script/check-duplicate-dependencies",
     "deduplicate": "yarn-deduplicate --strategy fewer",
     "dev": "yarn install --frozen-lockfile && yarn start",
-    "fixlint": "yarn run fixlint.eslint && yarn run fixlint.stylelint",
-    "fixlint.eslint": "eslint --ext .js,.jsx --fix src test *.js",
+    "fixlint": "yarn run fixlint.eslint && yarn run fixlint.stylelint && yarn run fixlint.prettier",
+    "fixlint.eslint": "eslint --ext .js,.jsx --fix .",
+    "fixlint.prettier": "prettier --write '**/*.{json,html,md,yml}'",
     "fixlint.stylelint": "stylelint --fix src/**/*.css",
-    "lint": "yarn run lint.eslint && yarn run lint.stylelint",
-    "lint.eslint": "eslint --max-warnings=0 --report-unused-disable-directives --ext .js,.jsx -- src test *.js",
+    "lint": "yarn run lint.eslint && yarn run lint.stylelint && yarn run lint.prettier",
+    "lint.eslint": "eslint --max-warnings=0 --report-unused-disable-directives --ext .js,.jsx -- .",
+    "lint.prettier": "prettier --check '**/*.{json,html,md,yml}'",
     "lint.stylelint": "stylelint src/**/*.css",
     "preview": "rm -rvf dist/* && NODE_ENV=production gulp build && static -a 0.0.0.0 -p 3000 dist",
     "test-jest": "jest",
