--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,14 @@
     "browser": true,
     "es6": true
   },
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:react/recommended",
+    "plugin:promise/recommended",
+    "plugin:prettier/recommended"
+  ],
   "globals": {
     "__dirname": true
   },
@@ -141,7 +149,6 @@
     ],
     "consistent-return": "warn",
     "consistent-this": "warn",
-    "constructor-super": "error",
     "dot-notation": "warn",
     "eqeqeq": "warn",
     "func-names": [
@@ -152,11 +159,8 @@
       "warn",
       "declaration"
     ],
-    "getter-return": "error",
     "guard-for-in": "warn",
-    "import/default": "error",
     "import/dynamic-import-chunkname": "warn",
-    "import/export": "warn",
     "import/extensions": [
       "warn",
       "always",
@@ -167,7 +171,6 @@
       }
     ],
     "import/first": "warn",
-    "import/named": "error",
     "import/newline-after-import": "warn",
     "import/no-absolute-path": "warn",
     "import/no-amd": "warn",
@@ -182,11 +185,8 @@
     ],
     "import/no-commonjs": "warn",
     "import/no-cycle": "error",
-    "import/no-duplicates": "warn",
     "import/no-extraneous-dependencies": "error",
     "import/no-mutable-exports": "warn",
-    "import/no-named-as-default": "warn",
-    "import/no-named-as-default-member": "warn",
     "import/no-named-default": "warn",
     "import/no-namespace": "warn",
     "import/no-nodejs-modules": [
@@ -208,7 +208,6 @@
         ]
       }
     ],
-    "import/no-unresolved": "error",
     "import/no-useless-path-segments": "warn",
     "import/no-webpack-loader-syntax": "warn",
     "import/order": [
@@ -233,38 +232,23 @@
     "no-await-in-loop": "warn",
     "no-caller": "warn",
     "no-catch-shadow": "warn",
-    "no-class-assign": "warn",
-    "no-cond-assign": "warn",
     "no-console": "warn",
-    "no-const-assign": "error",
     "no-constant-condition": "warn",
     "no-continue": "warn",
-    "no-control-regex": "warn",
     "no-debugger": "warn",
-    "no-delete-var": "warn",
     "no-div-regex": "warn",
-    "no-dupe-args": "error",
-    "no-dupe-class-members": "error",
-    "no-dupe-keys": "error",
-    "no-duplicate-case": "error",
     "no-else-return": "warn",
     "no-empty": "warn",
-    "no-empty-character-class": "warn",
-    "no-empty-pattern": "warn",
     "no-eq-null": "warn",
     "no-eval": "warn",
-    "no-ex-assign": "error",
     "no-extend-native": "warn",
     "no-extra-bind": "warn",
     "no-extra-boolean-cast": "warn",
     "no-fallthrough": "warn",
-    "no-func-assign": "error",
-    "no-global-assign": "error",
     "no-implicit-coercion": "warn",
     "no-implied-eval": "warn",
     "no-inline-comments": "warn",
     "no-inner-declarations": "warn",
-    "no-invalid-regexp": "error",
     "no-invalid-this": "error",
     "no-iterator": "error",
     "no-labels": "error",
@@ -281,14 +265,10 @@
     "no-new-require": "warn",
     "no-new-wrappers": "warn",
     "no-new": "warn",
-    "no-obj-calls": "warn",
-    "no-octal": "warn",
     "no-octal-escape": "warn",
     "no-param-reassign": "warn",
     "no-path-concat": "warn",
     "no-proto": "warn",
-    "no-redeclare": "error",
-    "no-regex-spaces": "warn",
     "no-restricted-imports": [
       "error",
       "jquery"
@@ -300,15 +280,10 @@
     "no-sequences": "warn",
     "no-shadow": "warn",
     "no-shadow-restricted-names": "warn",
-    "no-sparse-arrays": "warn",
     "no-throw-literal": "warn",
-    "no-this-before-super": "error",
-    "no-undef": "error",
     "no-undef-init": "warn",
-    "no-unexpected-multiline": "warn",
     "no-unneeded-ternary": "warn",
     "no-unreachable": "warn",
-    "no-unsafe-negation": "error",
     "no-unused-expressions": "warn",
     "no-unused-vars": "warn",
     "no-use-before-define": [
@@ -340,12 +315,9 @@
     "prettier/prettier": "warn",
     "private-props/no-unused-or-undeclared": "warn",
     "private-props/no-use-outside": "warn",
-    "promise/no-callback-in-promise": "warn",
-    "promise/no-promise-in-callback": "warn",
     "promise/param-names": "warn",
     "promise/prefer-await-to-callbacks": "warn",
     "promise/prefer-await-to-then": "warn",
-    "promise/valid-params": "warn",
     "radix": "warn",
     "react/display-name": "warn",
     "react/forbid-foreign-prop-types": "warn",
@@ -358,10 +330,7 @@
       "never"
     ],
     "react/jsx-key": "warn",
-    "react/jsx-no-comment-textnodes": "warn",
-    "react/jsx-no-duplicate-props": "warn",
     "react/jsx-no-target-blank": "warn",
-    "react/jsx-no-undef": "error",
     "react/jsx-sort-props": [
       "warn",
       {
@@ -370,19 +339,13 @@
       }
     ],
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "warn",
-    "react/no-children-prop": "warn",
-    "react/no-danger-with-children": "error",
     "react/no-deprecated": "warn",
     "react/no-did-mount-set-state": "warn",
     "react/no-did-update-set-state": "warn",
-    "react/no-direct-mutation-state": "error",
     "react/no-multi-comp": "warn",
     "react/no-set-state": "warn",
     "react/no-string-refs": "warn",
-    "react/no-unescaped-entities": "warn",
     "react/no-unknown-property": "warn",
-    "react/no-unsafe": "warn",
     "react/no-unused-prop-types": "warn",
     "react/prefer-es6-class": [
       "warn",
@@ -392,9 +355,7 @@
       "warn"
     ],
     "react/prop-types": "warn",
-    "react/react-in-jsx-scope": "error",
     "react/require-default-props": "warn",
-    "react/require-render-return": "error",
     "react/self-closing-comp": "warn",
     "react/sort-comp": "warn",
     "react/sort-prop-types": [
@@ -416,7 +377,6 @@
     ],
     "use-isnan": "warn",
     "valid-jsdoc": "warn",
-    "valid-typeof": "error",
     "yoda": [
       "warn",
       "never"
