--- a/.eslintrc
+++ b/.eslintrc
@@ -127,85 +127,23 @@
   "plugins": [
     "import",
     "react",
+    "prettier",
     "promise",
     "private-props"
   ],
   "rules": {
     "accessor-pairs": "error",
-    "array-bracket-newline": [
-      "warn",
-      {
-        "multiline": true
-      }
-    ],
-    "array-bracket-spacing": [
-      "warn",
-      "never"
-    ],
-    "array-element-newline": [
-      "warn",
-      "consistent"
-    ],
-    "arrow-body-style": [
-      "warn",
-      "as-needed"
-    ],
-    "arrow-parens": [
-      "warn",
-      "as-needed",
-      {
-        "requireForBlockBody": true
-      }
-    ],
-    "arrow-spacing": "warn",
-    "block-spacing": [
-      "warn",
-      "always"
-    ],
-    "brace-style": [
-      "warn",
-      "1tbs"
-    ],
     "camelcase": [
       "warn",
       {
         "properties": "never"
       }
     ],
-    "comma-dangle": [
-      "warn",
-      {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "always-multiline"
-      }
-    ],
-    "comma-spacing": [
-      "warn",
-      {
-        "before": false,
-        "after": true
-      }
-    ],
-    "complexity": "warn",
-    "computed-property-spacing": [
-      "warn",
-      "never"
-    ],
     "consistent-return": "warn",
     "consistent-this": "warn",
     "constructor-super": "error",
-    "curly": "warn",
-    "dot-location": "warn",
     "dot-notation": "warn",
-    "eol-last": "warn",
     "eqeqeq": "warn",
-    "function-paren-newline": [
-      "warn",
-      "consistent"
-    ],
     "func-names": [
       "warn",
       "as-needed"
@@ -214,16 +152,7 @@
       "warn",
       "declaration"
     ],
-    "generator-star-spacing": [
-      "warn",
-      {
-        "before": false,
-        "after": true,
-        "anonymous": "neither"
-      }
-    ],
     "getter-return": "error",
-    "global-require": "warn",
     "guard-for-in": "warn",
     "import/default": "error",
     "import/dynamic-import-chunkname": "warn",
@@ -289,44 +218,6 @@
       }
     ],
     "import/unambiguous": "warn",
-    "indent": [
-      "warn",
-      2,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "jsx-quotes": [
-      "warn",
-      "prefer-double"
-    ],
-    "key-spacing": [
-      "warn",
-      {
-        "beforeColon": false,
-        "afterColon": true,
-        "mode": "strict"
-      }
-    ],
-    "keyword-spacing": [
-      "warn",
-      {
-        "before": true,
-        "after": true
-      }
-    ],
-    "linebreak-style": [
-      "warn",
-      "unix"
-    ],
-    "max-len": [
-      "warn",
-      79,
-      2,
-      {
-        "ignoreUrls": true
-      }
-    ],
     "new-cap": [
       "warn",
       {
@@ -336,7 +227,6 @@
         ]
       }
     ],
-    "new-parens": "warn",
     "no-alert": "warn",
     "no-array-constructor": "warn",
     "no-async-promise-executor": "warn",
@@ -367,13 +257,7 @@
     "no-extend-native": "warn",
     "no-extra-bind": "warn",
     "no-extra-boolean-cast": "warn",
-    "no-extra-parens": [
-      "warn",
-      "functions"
-    ],
-    "no-extra-semi": "warn",
     "no-fallthrough": "warn",
-    "no-floating-decimal": "warn",
     "no-func-assign": "error",
     "no-global-assign": "error",
     "no-implicit-coercion": "warn",
@@ -382,7 +266,6 @@
     "no-inner-declarations": "warn",
     "no-invalid-regexp": "error",
     "no-invalid-this": "error",
-    "no-irregular-whitespace": "warn",
     "no-iterator": "error",
     "no-labels": "error",
     "no-lone-blocks": "error",
@@ -390,10 +273,7 @@
     "no-loop-func": "warn",
     "no-misleading-character-class": "warn",
     "no-mixed-requires": "warn",
-    "no-mixed-spaces-and-tabs": "warn",
-    "no-multi-spaces": "warn",
     "no-multi-str": "warn",
-    "no-multiple-empty-lines": "warn",
     "no-negated-condition": "warn",
     "no-nested-ternary": "warn",
     "no-new-func": "warn",
@@ -420,11 +300,9 @@
     "no-sequences": "warn",
     "no-shadow": "warn",
     "no-shadow-restricted-names": "warn",
-    "no-spaced-func": "warn",
     "no-sparse-arrays": "warn",
     "no-throw-literal": "warn",
     "no-this-before-super": "error",
-    "no-trailing-spaces": "warn",
     "no-undef": "error",
     "no-undef-init": "warn",
     "no-unexpected-multiline": "warn",
@@ -445,47 +323,21 @@
     "no-void": "warn",
     "no-warning-comments": "warn",
     "no-with": "error",
-    "object-curly-newline": [
-      "warn",
-      {
-        "consistent": true
-      }
-    ],
-    "object-curly-spacing": [
-      "warn",
-      "never"
-    ],
     "object-shorthand": [
       "warn",
       "always"
-    ],
-    "one-var": [
-      "warn",
-      {
-        "uninitialized": "always",
-        "initialized": "never"
-      }
     ],
     "operator-assignment": [
       "warn",
       "always"
     ],
-    "operator-linebreak": [
-      "warn",
-      "after"
-    ],
-    "padded-blocks": [
-      "warn",
-      "never"
-    ],
-    "prefer-arrow-callback": "warn",
     "prefer-const": "warn",
-    "prefer-destructuring": "warn",
     "prefer-promise-reject-errors": "warn",
     "prefer-reflect": "warn",
     "prefer-rest-params": "warn",
     "prefer-spread": "warn",
     "prefer-template": "warn",
+    "prettier/prettier": "warn",
     "private-props/no-unused-or-undeclared": "warn",
     "private-props/no-use-outside": "warn",
     "promise/no-callback-in-promise": "warn",
@@ -501,46 +353,15 @@
       "warn",
       "never"
     ],
-    "react/jsx-closing-bracket-location": [
-      "warn",
-      "tag-aligned"
-    ],
     "react/jsx-curly-brace-presence": [
       "warn",
       "never"
-    ],
-    "react/jsx-curly-spacing": [
-      "warn",
-      "never"
-    ],
-    "react/jsx-equals-spacing": [
-      "warn",
-      "never"
-    ],
-    "react/jsx-first-prop-new-line": [
-      "warn",
-      "multiline"
-    ],
-    "react/jsx-handler-names": [
-      "warn",
-      {
-        "eventHandlerPrefix": "_handle"
-      }
-    ],
-    "react/jsx-indent": [
-      "warn",
-      2
-    ],
-    "react/jsx-indent-props": [
-      "warn",
-      2
     ],
     "react/jsx-key": "warn",
     "react/jsx-no-comment-textnodes": "warn",
     "react/jsx-no-duplicate-props": "warn",
     "react/jsx-no-target-blank": "warn",
     "react/jsx-no-undef": "error",
-    "react/jsx-props-no-multi-spaces": "warn",
     "react/jsx-sort-props": [
       "warn",
       {
@@ -548,18 +369,8 @@
         "shorthandFirst": true
       }
     ],
-    "react/jsx-tag-spacing": [
-      "warn",
-      {
-        "closingSlash": "never",
-        "beforeSelfClosing": "always",
-        "afterOpening": "never"
-      }
-    ],
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "warn",
-    "react/jsx-wrap-multilines": "warn",
-    "react/no-array-index-key": "warn",
     "react/no-children-prop": "warn",
     "react/no-danger-with-children": "error",
     "react/no-deprecated": "warn",
@@ -578,10 +389,7 @@
       "always"
     ],
     "react/prefer-stateless-function": [
-      "warn",
-      {
-        "ignorePureComponents": true
-      }
+      "warn"
     ],
     "react/prop-types": "warn",
     "react/react-in-jsx-scope": "error",
@@ -598,48 +406,6 @@
     "require-atomic-updates": "warn",
     "require-unicode-regexp": "warn",
     "require-yield": "error",
-    "quote-props": [
-      "warn",
-      "as-needed",
-      {
-        "keywords": true
-      }
-    ],
-    "quotes": [
-      "warn",
-      "single"
-    ],
-    "semi": [
-      "warn",
-      "always"
-    ],
-    "semi-spacing": [
-      "warn",
-      {
-        "before": false,
-        "after": true
-      }
-    ],
-    "space-before-blocks": [
-      "warn",
-      "always"
-    ],
-    "space-before-function-paren": [
-      "warn",
-      "never"
-    ],
-    "space-in-parens": [
-      "warn",
-      "never"
-    ],
-    "space-infix-ops": "warn",
-    "space-unary-ops": [
-      "warn",
-      {
-        "words": true,
-        "nonwords": false
-      }
-    ],
     "spaced-comment": [
       "warn",
       "always"
@@ -648,16 +414,9 @@
       "warn",
       "never"
     ],
-    "switch-colon-spacing": "warn",
     "use-isnan": "warn",
-    "template-curly-spacing": [
-      "warn",
-      "never"
-    ],
     "valid-jsdoc": "warn",
     "valid-typeof": "error",
-    "wrap-iife": "warn",
-    "yield-star-spacing": "warn",
     "yoda": [
       "warn",
       "never"
