--- a/package.json
+++ b/package.json
@@ -311,10 +311,12 @@
     "cssnano": "^3.10.0",
     "doctoc": "^1.2.0",
     "eslint": "^5.6.0",
+    "eslint-config-prettier": "^5.0.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-private-props": "^0.3.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
@@ -347,6 +349,7 @@
     "npm-check": "^5.9.0",
     "null-loader": "^0.1.1",
     "postcss-preset-env": "^5.3.0",
+    "prettier": "^1.18.2",
     "raw-loader": "^0.5.1",
     "redux-saga-test-plan": "^4.0.0-beta.2",
     "rosie": "^2.0.1",
