Automatically upgrade project libraries

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -159,7 +159,9 @@
         "browser-sync",
         "doctoc",
         "is-docker",
+        "jquery",
         "jscodeshift",
+        "p5",
         "prettier",
         "sinon",
         "rosie",
