--- a/package.json
+++ b/package.json
@@ -392,6 +392,13 @@
     "react-test-renderer": "16.13.1",
     "redux-mock-store": "1.5.4",
     "redux-saga-test-plan": "4.0.0-rc.3",
+    "rollup": "1.26.2",
+    "rollup-plugin-babel": "4.3.3",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-json": "4.0.0",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-react-svg": "3.0.3",
+    "rollup-plugin-string": "3.0.0",
     "rosie": "2.0.1",
     "script-ext-html-webpack-plugin": "2.1.4",
     "sinon": "9.0.1",
