Messing about with babel aliases

--- a/contrib/vscode/settings.json
+++ b/contrib/vscode/settings.json
@@ -19,6 +19,6 @@
   "travis.pro": true,
   "yarn.bin": "./tools/yarn.py",
   "[javascript]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    "editor.formatOnSave": false,
   }
 }
